# GameTest

./: CMakeLists.txt  makefile
Config/: game.ini  game2.ini
Maps/: Dungeon0.c  Dungeon0.h  Dungeon0Items.c  Dungeon0Mobs.c  Dungeon0Pass.c  atmo.h  dungeon1.h  land1.c  land1.h  water.h
Maps/proto/: dungeon1.blend  dungeon1.blend1  land1.blend  land1.blend1  land2.blend1
Models/: anubitas.c  anubitas.h  anubitas_w1.c  anubitas_w1.h  anubitas_w2.c  anubitas_w2.h  arrow.h  bezier.h  fountain1.h  house1.h  padestal.h  ship.h  signpost.h  spider2.c  spider2.h  spider2a1.c  spider2a1.h  spider2w1.c  spider2w1.h  tavern.h  temple.c  temple.h  tree.h  tree1.h  tree2.h  well.h
Textures/: cross.tga  minimap.tga
Textures/Buttons/: Btn_back.tga  Btn_conf.tga  Btn_exit.tga  Btn_invent.tga  Btn_leave.tga  Btn_ng.tga  Btn_quest.tga  Btn_skills.tga  Btn_stats.tga  Btn_temp.tga  bar.tga  check0.tga  check1.tga  info.tga  loading.tga  marble.tga
Textures/High/: minimap.tga
Textures/High/Buildings/: armorer_i.tga  (+3 more)
Textures/Items/: armor01.tga  boots01.tga  gun01.tga  helm01.tga  inventory.tga  quest01.tga  quest02.tga  shield01.tga
src/: AI.c  AI.h  Exit.c  Exit.h  TextInput.c  TextInput.h  building_inside.c  building_inside.h  conf.c  conf.h  credits.c  credits.h  events.c  events.h  game.c  game_over.c  game_over.h  game_win.c  game_win.h  inventory.c  inventory.h  items.c  items.h  keyboard.c  keyboard.h  loading.c  loading.h  makefile~  menu_conf.c  menu_conf.h  menu_game.c  menu_game.h  menu_main.c  menu_main.h  mouse.c  mouse.h  passage.c  passage.h  player.c  player.h  (+20 more)
(+7 files in other folders)
